<resources>
    <string name="app_name">HelloWorld</string>
    <string name="button1">constraint_layout</string>
    <string name="button2">login</string>
    <string name="button3">pick_contact</string>
    <string name="button4">fragment</string>
    <string name="button5">recycler_view</string>
    <string name="button6">thread</string>
    <string name="button7">handler</string>
    <string name="button8">rxjava</string>
    <string name="button9">sp</string>
    <string name="button10">moments</string>
    <string name="title">Android practice</string>
    <string name="hello">hello!</string>
    <string name="sign_up">signup</string>
    <string name="login">Login</string>
    <string name="github">Github</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="sign_up_with_email">Sign Up with E-mail</string>
    <string name="android">Android</string>
    <string name="java">Java</string>
    <string name="android_fragment_content">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="java_fragment_content">Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="avatar">avatar</string>
    <string name="tweet_footer">到底了</string>
    <string name="start">Start</string>
    <string name="handler_button1">button1</string>
    <string name="sp_content">Welcome back</string>
    <string name="sp_prompt_information">Prompt message:\nclick "get it" and no longer prompt.</string>
    <string name="sp_get_it">get it</string>
    <string name="handler_button2">button2</string>
    <string name="user_profile_background_image">profile background image</string>
</resources>